--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+  
+    <style>
+      .pub-card {
+        cursor: pointer;
+      }
+    </style>
+    
+  
   </head>
   <body>
     <nav
