--- a/index.html
+++ b/index.html
@@ -946,8 +946,32 @@
                     include artificial intelligence hardware design and
                     processing in memory (PIM).
                   </p>
-                  <p><span>Email</span>wjd5952 @hanyang.ac.kr</p>
+                  <p><span>Email</span>wjd5952@hanyang.ac.kr</p>
                 </div>
+
+              </div>
+            </div>
+            <div class="wrapper">
+              <div class="user-card">
+                <div class="user-card-img">
+                  <img src="img/jh-park-profile-img.jpg" alt="" />
+                </div>
+                <div class="user-card-info">
+                  <h2>Jong-Hoon Park</h2>
+                  <p>
+                    <span>Research Interests</span>AI hardware design and Digital PIM
+                  </p>
+                  <p><span>Tape-out Schedule</span></p>
+                  <p>
+                    <span>Details</span>Currently pursuing a Bachelor's degree
+                    in the school of electrical engineering at Hanyang
+                    University, Ansan, South Korea. His research interests
+                    include artificial intelligence hardware design and
+                    Digital processing in memory (Digital PIM).
+                  </p>
+                  <p><span>Email</span>hoon765@hanyang.ac.kr</p>
+                </div>
+
               </div>
             </div>
             <div class="wrapper">
