change pic and intern

--- a/index.html
+++ b/index.html
@@ -995,6 +995,42 @@
                 </div>
               </div>
             </div>
+            <h5 class="h5-items" id="ms-students">Undergraduate Internship</h5>
+            <div class="wrapper">
+              <div class="user-card">
+                <div class="user-card-img">
+                  <img src="img/HYU_logo.png" alt="" />
+                </div>
+                <div class="user-card-info">
+                  <h2>Hanyang University Erica</h2>
+                  <p><span>홍갑규</span></p>
+                  <p><span>박시원</span></p>
+                  <p><span>김승현</span></p>
+                  <p><span>박문석</span></p>
+                  <p><span>이진호</span></p>
+                  <p><span>정보성</span></p>
+                  <p><span>이도형</span></p>
+                  <p><span>최재현</span></p>
+                  <p><span>원지섭</span></p>
+                  <p><span>이동욱</span></p>
+                  <p><span>정현우</span></p>
+                </div>
+              </div>
+            </div>
+            <div class="wrapper">
+              <div class="user-card">
+                <div class="user-card-img">
+                  <img src="img/IIT.png" alt="" />
+                </div>
+                <div class="user-card-info">
+                  <h2>Indian Institutes of Technology</h2>
+                  <p><span>K Vasanthakumaaran</span></p>
+                  <p><span>Sneha Das</span></p>
+                  <p><span>Devarsh Bhandari</span></p>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
