--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
             <div class="dim"></div>
 
             <div class="autoplay">
-              <div class="sponsor-item">sponsor1</div>
-              <div class="sponsor-item">sponsor2</div>
-              <div class="sponsor-item">sponsor3</div>
-              <div class="sponsor-item">sponsor4</div>
-              <div class="sponsor-item">sponsor5</div>
-              <div class="sponsor-item">sponsor6</div>
-              <div class="sponsor-item">sponsor7</div>
-              <div class="sponsor-item">sponsor8</div>
-              <div class="sponsor-item">sponsor9</div>
+              <div class="sponsor-item">   </div>
+              <div class="sponsor-item">   </div>
+              <div class="sponsor-item">   </div>
+              <div class="sponsor-item">   </div>
+              <div class="sponsor-item">   </div>
+              <div class="sponsor-item">   </div>
+              <div class="sponsor-item">   </div>
+              <div class="sponsor-item">   </div>
+              <div class="sponsor-item">   </div>
             </div>
             <h2 class="home-sponsor-title">Sponsors</h2>
             <div class="home-description-container">
