--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <div class="gallery-card-container">
               <div class="card">
                 <img
-                  src="img/dummy-party-img.jpg"
+                  src="img/dummy3-img.png"
                   class="card-img-top"
                   alt="..."
                 />
@@ -252,7 +252,7 @@
               </div>
               <div class="card">
                 <img
-                  src="img/dummy-dining-img.jpg"
+                  src="img/dummy3-img.png"
                   class="card-img-top"
                   alt="..."
                 />
@@ -263,7 +263,7 @@
               </div>
               <div class="card">
                 <img
-                  src="img/dummy-party-img.jpg"
+                  src="img/dummy3-img.png"
                   class="card-img-top"
                   alt="..."
                 />
