--- a/index.html
+++ b/index.html
@@ -371,38 +371,126 @@
                   data-bs-target="#exampleModal"
                   src="img/2T_eDRAM_PIM.png"
                 />
+                <p>2T eDRAM PIM</p>
+                <p>May (65-nm T)'24</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>ILO-based PUF</p>
+                <p>May (65-nm T)'24</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>PI-based CDR</p>
+                <p>June (28-nm T)'24</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>TI SAR ADC</p>
+                <p>June (28-nm T)'24</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>Supply Noise Insensitive ADPLL</p>
+                <p>Dec (65-nm T)'23</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>ADPLL ILO Calibration</p>
+                <p>Dec (65-nm T)'23</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>SRAM PIM Accelerator</p>
+                <p>Dec (65-nm T)'23</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>Adaptive Gain Controlled DPLL</p>
+                <p>Dec (65-nm T)'23</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>TX-PAM4-DRV</p>
+                <p>July (28-nm S)'23</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>High-Speed Equalizer</p>
+                <p>July (28-nm S)'23</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>ADPLL</p>
+                <p>Apr (28-nm S)'23</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>CLICK THIS</p>
                 <p>CLICK THIS</p>
               </div>
               <div class="chip-item">
-                <img data-bs-toggle="modal" src="img/2T_eDRAM_PIM.png" />
-                <p>dummy</p>
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>CLICK THIS</p>
+                <p>CLICK THIS</p>
               </div>
               <div class="chip-item">
-                <img data-bs-toggle="modal" src="img/2T_eDRAM_PIM.png" />
-                <p>dummy</p>
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/2T_eDRAM_PIM.png"
+                />
+                <p>CLICK THIS</p>
+                <p>CLICK THIS</p>
               </div>
-              <div class="chip-item">
-                <img data-bs-toggle="modal" src="img/2T_eDRAM_PIM.png" />
-                <p>dummy</p>
-              </div>
-              <div class="chip-item">
-                <img data-bs-toggle="modal" src="img/2T_eDRAM_PIM.png" />
-                <p>dummy</p>
-              </div>
-              <div class="chip-item">
-                <img data-bs-toggle="modal" src="img/2T_eDRAM_PIM.png" />
-                <p>dummy</p>
-              </div>
-              <div class="chip-item">
-                <img data-bs-toggle="modal" src="img/2T_eDRAM_PIM.png" />
-                <p>dummy</p>
-              </div>
-              <div class="chip-item">
-                <img data-bs-toggle="modal" src="img/2T_eDRAM_PIM.png" />
-                <p>dummy</p>
-              </div>
-            </div>
-
             <h5 class="h5-items" id="research-projects">
               Research Projects & Sponsors
             </h5>
