칩 갤러리에 research projects 들어간 문제 해결

--- a/index.html
+++ b/index.html
@@ -54,14 +54,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-  
+
     <style>
       .pub-card {
         cursor: pointer;
       }
     </style>
-    
-  
   </head>
   <body>
     <nav
@@ -160,15 +158,15 @@
             <div class="dim"></div>
 
             <div class="autoplay">
-              <div class="sponsor-item">   </div>
-              <div class="sponsor-item">   </div>
-              <div class="sponsor-item">   </div>
-              <div class="sponsor-item">   </div>
-              <div class="sponsor-item">   </div>
-              <div class="sponsor-item">   </div>
-              <div class="sponsor-item">   </div>
-              <div class="sponsor-item">   </div>
-              <div class="sponsor-item">   </div>
+              <div class="sponsor-item"></div>
+              <div class="sponsor-item"></div>
+              <div class="sponsor-item"></div>
+              <div class="sponsor-item"></div>
+              <div class="sponsor-item"></div>
+              <div class="sponsor-item"></div>
+              <div class="sponsor-item"></div>
+              <div class="sponsor-item"></div>
+              <div class="sponsor-item"></div>
             </div>
             <h2 class="home-sponsor-title">Sponsors</h2>
             <div class="home-description-container">
@@ -240,33 +238,21 @@
             </div>
             <div class="gallery-card-container">
               <div class="card">
-                <img
-                  src="img/dummy3-img.png"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Yeongsu's Birthday</h5>
                   <p class="card-text">24.05.28</p>
                 </div>
               </div>
               <div class="card">
-                <img
-                  src="img/dummy3-img.png"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Dining Time</h5>
                   <p class="card-text">24.06.21</p>
                 </div>
               </div>
               <div class="card">
-                <img
-                  src="img/dummy3-img.png"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Yeongsu's Birthday</h5>
                   <p class="card-text">24.05.28</p>
@@ -491,6 +477,7 @@
                 <p>CLICK THIS</p>
                 <p>CLICK THIS</p>
               </div>
+            </div>
             <h5 class="h5-items" id="research-projects">
               Research Projects & Sponsors
             </h5>
@@ -1036,7 +1023,6 @@
                   </p>
                   <p><span>Email</span>wjd5952@hanyang.ac.kr</p>
                 </div>
-
               </div>
             </div>
             <div class="wrapper">
@@ -1047,19 +1033,19 @@
                 <div class="user-card-info">
                   <h2>Jong-Hoon Park</h2>
                   <p>
-                    <span>Research Interests</span>AI hardware design and Digital PIM
+                    <span>Research Interests</span>AI hardware design and
+                    Digital PIM
                   </p>
                   <p><span>Tape-out Schedule</span></p>
                   <p>
                     <span>Details</span>Currently pursuing a Bachelor's degree
                     in the school of electrical engineering at Hanyang
                     University, Ansan, South Korea. His research interests
-                    include artificial intelligence hardware design and
-                    Digital processing in memory (Digital PIM).
+                    include artificial intelligence hardware design and Digital
+                    processing in memory (Digital PIM).
                   </p>
                   <p><span>Email</span>hoon765@hanyang.ac.kr</p>
                 </div>
-
               </div>
             </div>
             <div class="wrapper">
@@ -1174,8 +1160,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/10049920"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1216,8 +1201,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/10049900"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1271,8 +1255,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/10002363"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1331,8 +1314,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/document/9386211"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1382,8 +1364,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/9239394"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1434,8 +1415,7 @@
                         <a
                           class="card-text"
                           href="https://koreascience.kr/article/JAKO202021262090393.page"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1493,8 +1473,7 @@
                         <a
                           class="card-text"
                           href="https://koreascience.kr/article/JAKO202021262090393.page"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1545,8 +1524,7 @@
                         <a
                           class="card-text"
                           href="https://koreascience.kr/article/JAKO202021262090393.page"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1594,8 +1572,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/8771119"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1645,8 +1622,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/8778157"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1696,8 +1672,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/8662453"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1754,8 +1729,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/8579270"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1804,8 +1778,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/8514813"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1856,8 +1829,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/8292824"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1917,8 +1889,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/8022928"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -1970,8 +1941,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/7870477"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -2030,8 +2000,7 @@
                         <a
                           class="card-text"
                           href="https://koreascience.kr/article/JAKO201607959403082.page"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -2080,8 +2049,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/7538886"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -2142,8 +2110,7 @@
                         <a
                           class="card-text"
                           href="https://ieeexplore.ieee.org/abstract/document/7313908"
-                          ></a
-                        >
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -2300,17 +2267,15 @@
       </div>
     </div>
 
-<!--카드 클릭 시 href로 이동하도록 하는 이벤트 리스너 추가 -->
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    document.querySelectorAll('.pub-card').forEach(card => {
-      card.addEventListener('click', () => {
-        window.location.href = card.querySelector('a.card-text').href;
+    <!--카드 클릭 시 href로 이동하도록 하는 이벤트 리스너 추가 -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        document.querySelectorAll(".pub-card").forEach((card) => {
+          card.addEventListener("click", () => {
+            window.location.href = card.querySelector("a.card-text").href;
+          });
+        });
       });
-    });
-  });
-</script>
-
-
+    </script>
   </body>
 </html>
