news gallery 상세보기 html 추가, 버튼에 링크

--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
           <div class="col-12 col-lg-8">
             <div class="gallery-title-row">
               <h5>Gallery</h5>
-              <button class="btn btn-primary btn-rotate">+</button>
+              <a href="news_gallery.html"
+                ><button class="btn btn-primary btn-rotate">+</button></a
+              >
             </div>
             <div class="gallery-card-container">
               <div class="card">
