--- a/news_gallery.html
+++ b/news_gallery.html
@@ -117,6 +117,77 @@
         </div>
       </div>
     </nav>
+
+    <div class="container news-gallery-detail">
+      <div class="row">
+        <h2 class="news-gallery-title">Gallery</h2>
+
+        <div class="col-12 col-lg-4">
+          <div class="card">
+            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Yeongsu's Birthday</h5>
+              <p class="card-text">24.05.28</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="card">
+            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Yeongsu's Birthday</h5>
+              <p class="card-text">24.05.28</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="card">
+            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Yeongsu's Birthday</h5>
+              <p class="card-text">24.05.28</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="card">
+            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Yeongsu's Birthday</h5>
+              <p class="card-text">24.05.28</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="card">
+            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Yeongsu's Birthday</h5>
+              <p class="card-text">24.05.28</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="card">
+            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Yeongsu's Birthday</h5>
+              <p class="card-text">24.05.28</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="card">
+            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Yeongsu's Birthday</h5>
+              <p class="card-text">24.05.28</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="js/academic.min.dc856155b640fa1cd8bd8b7b068fe79c.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
