--- a/news_gallery.html
+++ b/news_gallery.html
@@ -120,7 +120,7 @@
 
     <div class="container news-gallery-detail">
       <div class="row">
-        <h2 class="news-gallery-title">Gallery</h2>
+        <h2>Gallery</h2>
 
         <div class="col-12 col-lg-4">
           <div class="card">
