칩 갤러리 더보기 페이지 추가

--- a/chip_gallery.html
+++ b/chip_gallery.html
@@ -94,10 +94,10 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="index.html#news-gallery">News</a>
+              <a class="nav-link" href="index.html#news-gallery">News</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#research">Research</a>
+              <a class="nav-link active" href="index.html#research">Research</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index.html#people">People</a>
@@ -120,69 +120,116 @@
 
     <div class="container gallery-detail">
       <div class="row">
-        <h2>Gallery</h2>
+        <h2>Chip Gallery</h2>
 
-        <div class="col-12 col-lg-4">
-          <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img src="img/2T_eDRAM_PIM.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
+              <h5 class="card-title">2T_eDRAM_PIM</h5>
             </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>24.06.24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>DSR</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>TEST DESCRIPTION.</span>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="col-12 col-lg-4">
-          <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img src="img/2T_eDRAM_PIM.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
+              <h5 class="card-title">2T_eDRAM_PIM</h5>
             </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>24.06.24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>DSR</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>TEST DESCRIPTION.</span>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="col-12 col-lg-4">
-          <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img src="img/2T_eDRAM_PIM.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
+              <h5 class="card-title">2T_eDRAM_PIM</h5>
             </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>24.06.24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>DSR</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>TEST DESCRIPTION.</span>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="col-12 col-lg-4">
-          <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img src="img/2T_eDRAM_PIM.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
+              <h5 class="card-title">2T_eDRAM_PIM</h5>
             </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>24.06.24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>DSR</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>TEST DESCRIPTION.</span>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="col-12 col-lg-4">
-          <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img src="img/2T_eDRAM_PIM.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
+              <h5 class="card-title">2T_eDRAM_PIM</h5>
             </div>
-          </div>
-        </div>
-        <div class="col-12 col-lg-4">
-          <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-lg-4">
-          <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
-            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>24.06.24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>DSR</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>TEST DESCRIPTION.</span>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
