--- a/index.html
+++ b/index.html
@@ -349,7 +349,9 @@
             <img class="hpic-img" src="img/research-main-img.jpg" />
             <div class="gallery-title-row">
               <h5>Chip Gallery</h5>
-              <button class="btn btn-primary btn-rotate">+</button>
+              <a href="chip_gallery.html"
+                ><button class="btn btn-primary btn-rotate">+</button></a
+              >
             </div>
 
             <div class="multiple-items">
