publications 토글 제목 수정중
TODO
- show 됐을 때 토글 버튼이 아래쪽으로 보도록
- 연도별로 수정

--- a/index.html
+++ b/index.html
@@ -1121,6 +1121,37 @@
           </div>
           <div class="col-12 col-lg-8">
             <!-- 2024 -->
+            <div class="pub-row">
+              <button
+                class="btn btn-primary btn-rotate toggle-btn"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseExample"
+                aria-expanded="false"
+                aria-controls="collapseExample"
+              >
+                ▶
+              </button>
+              <a
+                class="btn btn-primary pub-year-title"
+                data-bs-toggle="collapse"
+                href="#collapseExample"
+                role="button"
+                aria-expanded="false"
+                aria-controls="collapseExample"
+              >
+                <h3>2024</h3>
+              </a>
+            </div>
+
+            <div class="collapse" id="collapseExample">
+              <div class="card card-body">
+                Some placeholder content for the collapse component. This panel
+                is hidden by default but revealed when the user activates the
+                relevant trigger.
+              </div>
+            </div>
+
             <h3>2024</h3>
             <hr />
             <!-- 2023 -->
