--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,10 @@
                       <li
                         class="list-group-item d-flex align-items-center flex-wrap"
                       >
-                        <span class="badge bg-success">KEYWORD</span>
+                        <span class="badge bg-success">Radiation-Hardened</span>
+                        <span class="badge bg-success">Processing-In-Memory</span>
+                        <span class="badge bg-success">Crossbar Array</span>
+                        <span class="badge bg-success">Space Application</span>
                       </li>
                       <li
                         class="list-group-item d-flex align-items-center flex-wrap"
