--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                   <img src="img/sh-ok-profile-img.png" alt="" />
                 </div>
                 <div class="user-card-info">
-                  <h2>Sang-Hyun Oks</h2>
+                  <h2>Sang-Hyun Ok</h2>
                   <p><span>Research Interests</span>CDR, PAM4 receiver</p>
                   <p>
                     <span>Tape-out Schedule</span>2024.06 (28-nm T), 2024.09
